--- a/.env
+++ b/.env
@@ -1,1 +1,15 @@
+DATABASE_URL= mongodb+srv://Easirmahi:01200120mahi@anchestor.wmvrhcb.mongodb.net
 
+NEXTAUTH_SECRET=
+
+GITHUB_ID=
+GITHUB_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+
+NEXT_PUBLIC_PUSHER_APP_KEY=
+PUSHER_APP_ID=
+PUSHER_SECRET=
