--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ NEXTAUTH_SECRET=
 GITHUB_ID=
 GITHUB_SECRET=
 
-GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_ID= 703210852639-ic8u4br6bdo6jg6dgguirqi7jkgbpl6l.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
