--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ GITHUB_ID=
 GITHUB_SECRET=
 
 GOOGLE_CLIENT_ID= 703210852639-ic8u4br6bdo6jg6dgguirqi7jkgbpl6l.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_SECRET= 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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 
