--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DATABASE_URL= mongodb+srv://Easirmahi:01200120mahi@anchestor.wmvrhcb.mongodb.net
 
 NEXTAUTH_SECRET=
 
-GITHUB_ID=
+GITHUB_ID= Ov23liRczxbzF8xNotI8
 GITHUB_SECRET=
 
 GOOGLE_CLIENT_ID= 703210852639-ic8u4br6bdo6jg6dgguirqi7jkgbpl6l.apps.googleusercontent.com
