--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DATABASE_URL= mongodb+srv://Easirmahi:01200120mahi@anchestor.wmvrhcb.mongodb.net
 NEXTAUTH_SECRET=
 
 GITHUB_ID= Ov23liRczxbzF8xNotI8
-GITHUB_SECRET=
+GITHUB_SECRET= 54a862387f205b3ce6463651fb2d2e445c92a15c
 
 GOOGLE_CLIENT_ID= 703210852639-ic8u4br6bdo6jg6dgguirqi7jkgbpl6l.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET= 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
