--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASE_URL= mongodb+srv://Easirmahi:01200120mahi@anchestor.wmvrhcb.mongodb.net
 
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=ywNQzZlxyxUJn2zXzu0rs8q+op0bX0i2NfisIDKDtng=
 
 GITHUB_ID= Ov23liRczxbzF8xNotI8
 GITHUB_SECRET= 54a862387f205b3ce6463651fb2d2e445c92a15c
