--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ GOOGLE_CLIENT_SECRET= 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
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=redwan-ahemed
 
 NEXT_PUBLIC_PUSHER_APP_KEY=
-PUSHER_APP_ID=
-PUSHER_SECRET=
+PUSHER_APP_ID= 1847550
+PUSHER_SECRET= 5be256b57f0fd4f04b81
