--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # MongoDB Connection String
-DATABASE_URL=mongodb+srv://Easirmahi:01200120mahi@anchestor.wmvrhcb.mongodb.net
-
+DATABASE_URL=mongodb+srv://redwan%20ahemed:iy5itYi2X1FzZJ8j@cluster0.mongodb.net/<dbname>?retryWrites=true&w=majority
 # NextAuth Secret
 NEXTAUTH_SECRET=ywNQzZlxyxUJn2zXzu0rs8q+op0bX0i2NfisIDKDtng=
 
