--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # MongoDB Connection String
-DATABASE_URL=mongodb+srv://redwan%20ahemed:iy5itYi2X1FzZJ8j@cluster0.mongodb.net/messenger-data?retryWrites=true&w=majority
-# NextAuth Secret
+DATABASE_URL=mongodb+srv://redwanahemed294:7e0UO9x6NqJfxzTq@cluster0.mongodb.net/chatDB?retryWrites=true&w=majority
 NEXTAUTH_SECRET=ywNQzZlxyxUJn2zXzu0rs8q+op0bX0i2NfisIDKDtng=
 
 # GitHub OAuth
