--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB Connection String
-DATABASE_URL=mongodb+srv://redwanahemed294:7e0UO9x6NqJfxzTq@cluster0.mongodb.net/chatDB?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://jonnysins:HIMU1585@got.zius7zf.mongodb.net/?retryWrites=true&w=majority&appName=GOT
 NEXTAUTH_SECRET=ywNQzZlxyxUJn2zXzu0rs8q+op0bX0i2NfisIDKDtng=
 
 # GitHub OAuth
